# palworld-api

./: .env  Cargo.toml  Dockerfile  README.md
data/: pal_breeding.csv  pal_breeding_rows.csv  pal_drops.csv  pal_drops_rows.csv  pal_info.csv  pal_info_rows.csv  pal_skills.csv  pal_skills_rows.csv  pal_stats.csv  pal_stats_rows.csv  pal_stats_rows.csv:Zone.Identifier  pal_suitabilities.csv  pal_suitabilities_rows.csv  pals_basic.csv  pals_basic_rows.csv
src/: body_schema.rs  db.rs  exceptions.rs  handler.rs  main.rs  model.rs  route.rs  schema.rs
src/handlers/: basic.rs  pal_drops.rs  pal_info.rs  pal_skills.rs  pal_suitabilities.rs
