[package]
name = "palworld-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.27.0", features = ["full"]}
sqlx = {version = "0.7.3", features = ["postgres", "macros", "runtime-tokio", "tls-native-tls"]}
axum = "0.7.2"
serde_json = "1.0.96"
serde = {version = "1.0.196", features = ["derive"]}
dotenv = "0.15.0"
tower-http = {version = "0.5.1", features = ["cors"]}
